# HEKAN

./: CMakeLists.txt  readme.md
model_params/: base_weights.0.txt  base_weights.1.txt  legendre_bias0_output.txt  legendre_bias1_output.txt  poly_weights.1.txt
models/: KALnet.py  mnist.py
src/: HeKAN.cu
